Correcting some spelling mistakes

--- a/Basic/first.html
+++ b/Basic/first.html
@@ -7,7 +7,7 @@
 <body>
     <p>
             <h1>
-                Press F12 or write click and then select inspect and then open the javascript consol.
+                Press F12 or right click and then select inspect and then open the javascript consol.
             </h1>
     </p>
     
